# pearscarf

./: .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: lint.yml
ai-work/plans/: 1.0.0-mem0-storage.md  1.1.0-langsmith.md  1.1.1-fix-mem0-startup-issues.md  1.1.3-mem0-openai-provider.md  1.11.0-ingest-expert.md  1.11.1-ingest-expert-impl.md  1.11.2-ingester-modes.md  1.11.3-direct-records-ingestion.md  1.11.4-ingest-and-eval.md  1.11.5-erase-all.md  1.12.0-candidate-retrieval-broaden.md  1.12.1-candidates-context.md  1.12.2-resolution-prompt.md  1.12.3-entity-resolution-wired.md  1.12.4-identified-as-edge.md  1.12.5-identified-as-dedup.md  1.13.0-graph-refactor.md  1.13.1-extract-write.md  1.13.2-write-loop.md  1.13.3-downstream-readers.md  1.14.0-curator-queue.md  1.14.1-curator-runner.md  1.14.2-affiliated-dedup.md  1.14.3-asserted-dedup.md  1.14.4-curate-expiry.md  1.14.5-global-confidence-check.md  1.15.0-context-query.md  1.15.1-mcp-server.md  1.15.2-primitive-tools.md  1.15.3-primitive-tools-1.md  1.15.4-convenience-tools-0.md  1.15.5-convenience-tools-1.md  1.15.6-docs-cli-integrations.md  1.16.0-eval-scorer-update.md  1.16.1-eval-runner-update.md  1.2.1-chroma-to-qdrant.md  1.3.0-prompt-code-decoupled.md  1.3.1-prompt-testing-utility.md  1.3.2-extraction-api-call-params.md  1.4.0-extraction-to-neo4j.md  (+7 more)
ai-work/specs/: 1.0.0-mem0-storage.md  1.10.0-dataset-eval.md  1.11.0-ingest-expert.md  1.11.1-ingest-expert-impl.md  1.11.2-ingester-modes.md  1.11.3-direct-records-ingestion.md  1.11.4-ingest-and-eval.md  1.11.5-erase-all.md  1.12.0-candidate-retrieval-broaden.md  1.12.1-candidates-context.md  1.12.2-resolution-prompt.md  1.12.3-entity-resolution-wired.md  1.12.4-identified-as-edge.md  1.12.5-identified-as-dedup.md  1.13.0-graph-refactor.md  1.13.1-extract-write.md  1.13.2-write-loop.md  1.13.3-downstream-readers.md  1.14.0-curator-queue.md  1.14.1-curator-runner.md  1.14.2-affiliated-dedup.md  1.14.3-asserted-dedup.md  1.14.4-curate-expiry.md  1.14.5-global-confidence-check.md  1.15.0-context-query.md  1.15.1-mcp-server.md  1.15.2-primitive-tools.md  1.15.3-primitive-tools-1.md  1.15.4-convenience-tools-0.md  1.15.5-convenience-tools-1.md  1.15.6-docs-cli-integrations.md  1.16.0-eval-scorer-update.md  1.16.1-eval-runner-update.md  1.2.0-remove-mem0-storage.md  1.2.2-postgres-migration.md  1.2.3-gut-data-processing-logic.md  1.3.0-prompt-code-decoupled.md  1.3.1-prompt-testing-utility.md  1.3.2-extraction-api-call-params.md  1.4.1-reindex-script.md  (+10 more)
docs/: architecture.md  context_query.md  curation.md  curator.md  data-model.md  deployment-vocab.md  eval-metrics.md  expert_guide.md  getting-started.md  mcp-clients.md  mcp_tools.md  onboarding.example.md  query-surface.md  ril-design.md  roadmap-eng.md  roadmap.md  usage.md  vision.md
experts/githubscarf/: .env.example  __init__.py  github_connect.py  github_ingest.py  manifest.yaml  pyproject.toml
experts/gmailscarf/: .env.example  __init__.py  gmail_connect.py  gmail_ingest.py  manifest.yaml  pyproject.toml
experts/gmailscarf/connector/: agent.py  api_client.py  poller.py  tools.py  writer.py
experts/gmailscarf/knowledge/: agent.md  extraction.md  relevancy.md
experts/gmailscarf/knowledge/records/: email.md
experts/gmailscarf/schemas/: email.json
experts/linearscarf/: .env.example  README.md  __init__.py  linear_connect.py  linear_ingest.py  manifest.yaml  pyproject.toml
experts/linearscarf/connector/: agent.py  api_client.py  poller.py  tools.py  writer.py
experts/linearscarf/knowledge/: agent.md  extraction.md  issue_format.md
experts/linearscarf/knowledge/records/: issue.md  issue_change.md
experts/linearscarf/schemas/: issue.json  linear_issue_change.json
pearscaff/: agent.py  bus.py  cli.py  cli_memory.py  config.py  db.py  discord_bot.py  extract_test.py  graph.py  indexer.py  linear_client.py  log.py  memory.py  neo4j_client.py  repl.py  status.py  store.py  terminal.py  tracing.py  vectorstore.py
pearscaff/agents/: base.py  expert.py  runner.py  worker.py
pearscaff/experts/: __init__.py  gmail.py  linear.py  retriever.py
pearscaff/knowledge/: __init__.py
pearscaff/prompts/: __init__.py  extraction.md  gmail_browser.md  retriever.md  worker.md
pearscaff/tools/: __init__.py  math.py  web_search.py
pearscarf/: __init__.py  assistant.py  bus.py  cli.py  cli_memory.py  config.py  consumer.py  context_query.py  curation.py  curator.py  curator_judge.py  db.py  deployment_vocab.py  discord_bot.py  eval_runner.py  expert_bot.py  expert_context.py  extract_test.py  extraction.py  graph.py  graph_access_tools.py  graph_query_tools.py  indexer.py  log.py  mcp_server.py  registry.py  repl.py  scoring.py  session_consumer.py  store.py  tools.py  tracing.py  tracked_call.py  triage.py
pearscarf/agents/: base.py  expert.py  llm_client.py  runner.py  worker.py
pearscarf/curation/: curator.py  curator_judge.py
pearscarf/eval/: report.py  runner.py  runner_legacy.py  scoring.py
pearscarf/experts/: __init__.py  gmail.py  ingest.py  linear.py  linear_client.py  retriever.py
pearscarf/extraction/: extraction.py
pearscarf/indexing/: extraction_tools.py  indexer.py  registry.py
pearscarf/interface/: cli.py  cli_memory.py  discord_bot.py  install.py  repl.py  startup.py  terminal.py
pearscarf/knowledge/: __init__.py  onboarding.md
pearscarf/mcp/: mcp_server.py
pearscarf/prompts/: curator_affiliated.md  entity_resolution.md  extraction.md  ingest.md  ingest_extraction.md  retriever.md
pearscarf/query/: context_query.py
pearscarf/storage/: db.py  graph.py  neo4j_client.py  store.py  vectorstore.py
pearscarf/tools/: __init__.py  math.py  web_search.py
pearscarf/triage/: __init__.py  triage.py  (+1 more)
scripts/: README.md  cost.py  erase_all.py  extract_test.py  migrate_sqlite_to_postgres.py  reindex.py  reindex_all.py  retrofit_temporal.py  test_extraction.py
tests/: conftest.py  test_harness.py
(+102 files in other folders)
