[project]
name = "pearscarf"
dynamic = ["version"]
description = "Operational infrastructure that grows itself"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic",
    "click",
    "discord.py",
    "google-api-python-client",
    "google-auth-oauthlib",
    "httpx",
    "langsmith",
    "neo4j",
    "playwright",
    "psycopg[binary]",
    "psycopg-pool",
    "qdrant-client",
    "python-dotenv",
    "sentence-transformers",
    "fastmcp",
]

[project.scripts]
pearscarf = "pearscarf.interface.cli:cli"
psc = "pearscarf.interface.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pearscarf/__init__.py"

[tool.pyright]
extraPaths = ["experts"]
